etc/css/style.css
/* ... */
div.inspector-components-with-header {
  margin-bottom: 10px;
}

div.inspector-components-with-header:last-child {
  margin-bottom: 0px;
}

div.inspector-components-content {
  display: flex;
  flex-direction: column;
}

div.inspector-components-nested {
  margin-left: 10px;
}

div.inspector-component {
  display: flex;
  flex-direction: column;
  margin-bottom: 15px;
  padding-top: 5px;
  padding-right: 5px;
}

div.inspector-component-name {
  display: flex;
}

div.inspector-component-name {
  color: #DDE0E6;
  font-weight: 500;
}

div.inspector-component-name div.detail-toggle-summary {
  border-radius: 2px;
  background-color: rgb(35, 40, 51, 0.0);
  transition: 0.3s background-color
}

div.inspector-component-name div.detail-toggle-summary:hover {
  background-color: rgb(35, 40, 51, 1.0);
}

span.inspector-component-object {
  color: #47B576;
}

div.inspector-component-overridden {
  display: flex;
  color: #4F5565;
  text-decoration: line-through;
  font-weight: 400;
}

span.inspector-header {
  position: relative;
  color: #47B576;
  font-weight: 500;
  white-space: nowrap;
}

span.inspector-header:first-child {
  margin-top: 10px;
}

div.inspector-props {
  display: flex;
  flex-wrap: wrap;
  margin-left: 10px;
  flex-direction: column;
  
  border-style: solid;
  border-width: 0px;
  border-left-width: 1px;
  border-color: #232833;
}

div.inspector-props-list {
  display: inline-flex;
}

div.inspector-kv {
  display: flex;
  position: relative;
  margin-right: 1px;
  width: 100%;
  justify-content: right;
}

span.inspector-kv-after-key {
  border-top-left-radius: 0px !important;
  border-bottom-left-radius: 0px !important;
}

div.inspector-prop {
  display: flex;
  margin-bottom: 1px; /* for when row collapses */
}

div.inspector-prop-object {
  display: flex;
  width: 100%;
  margin-top: 5px;
}

div.inspector-props-list span.inspector-value {
  padding-left: 0px;
  padding-right: 0px;
}

span.inspector-key, span.inspector-value {
  padding: 6px;
  color: #b4b4b4;
}

span.inspector-separator {
  padding: 6px;
  color: #b4b4b4;
}

div.inspector-props span.inspector-key {
  right: 220px;
  cursor: default;
  color: #47B576;
}

div.inspector-props span.inspector-value {
  width: 200px;
  background-color: #000;
}

span.inspector-value-bool {
  color: #4981B5;
}

span.inspector-value-int {
  color: #A2D8B4;
}

span.inspector-value-float {
  color: #A2D8B4;
}

span.inspector-value-text {
  color: #B5894B;
}

span.inspector-value-enum, span.inspector-value-bitmask {
  color: #7D67B5;
}

div.inspector-component-expand-nodata {
  width: 10px;
  text-align: center;
  color: #b4b4b4;
}

div.inspector-component-expand-nodata span {
  text-align: center;
}

span.inspector-parent {
  margin-left: 5px;
}

div.inspector-doc {
  display: flex;
  margin-left: 15px;
  margin-bottom: 15px;
}

span.inspector-brief {
  display: flex;
  color: #BDC1CC;
  margin-right: 5px;
}

span.inspector-link a { 
  color: #47B576;
  text-decoration: none;
  cursor: pointer;
}

div.inspector-entity-name {
  margin-left: 15px;
  margin-bottom: 15px;
  max-width: 380px;
  overflow: hidden;
  /* text-overflow: ellipsis; */
  white-space: nowrap;
}

span.inspector-entity-name {
  color: #BDC1CC;
  margin-right: 5px;
  overflow-x: hidden;
}

span.inspector-entity-name-label {
  font-weight: 500;
}

span.entity-reference span {
  white-space: nowrap;
}

span.entity-reference-clickable-name {
  transition: 0.3s color;
  cursor: pointer;
}

span.entity-reference-clickable-name:hover {
  color: #fff;
}

span.entity-parent {
  font-size: 12px;
  color: #47B576;
}

/* -- end of inspector -- */

div.url-modal {
  position: absolute;
  top: 0px;
  z-index: 99;
  background-color: rgb(0, 0, 0, 0.6);
  width: 100%;
  height: 100%;
}

div.url-modal-hidden {
  display: none;
}

div.url-modal-content {
  position: relative;
  top: calc(20% - 64px);
  margin: 0 auto;
  width: 700px;
  overflow: auto;
  overflow-wrap: anywhere;
  background-color: #232833;
  border-color: #232833;
  border-style: solid;
  border-width: 1px;
  border-radius: 3px;
  padding: 20px;
}

div.url-modal-url-container {
  background-color: #13151A;
  border-color: #000;
  border-width: 1px;
  border-style: solid;
  border-radius: 3px;
  padding: 20px;
  height: 200px;
}

div.url-modal-url {
  overflow-y: auto;
  height: 100%;
}

div.url-modal-content a {
  color: #DDE0E6;
}

div.url-modal h1 {
  font-size: 16px;
  margin: 0px;
  margin-bottom: 15px;
}

div.editor {
  padding-left: 10px;
  padding-bottom: 3px;
}

div.editor-detail {
  height: 200px;
}

div.editor-textarea {
  position: relative;
  min-width: 400px;
  height: 100%;
  border: none;
  resize: none;
  color: #DDE0E6;
  font-family: "Roboto Mono", Menlo, Monaco, "Courier New", monospace;
  font-size: 13px;
  letter-spacing: 0.0px;
}

button.editor-button-run {
  position: absolute;
  top: 7px;
  right: 7px;
  height: 35px;
  padding-left: 30px;
  padding-right: 30px;
  background-color: #47B576;
  color: #000;
  border: none;
  cursor: pointer;
}

div.ecs-query {
  display: flex;
  
  padding-top: 2px;
  padding-left: 5px;
  margin-left: -5px; /* offset padding */

  font-family: "Roboto Mono", Menlo, Monaco, "Courier New", monospace;
  font-size: 13px;
  letter-spacing: 0.0px;

  transition: background-color 0.2s;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: rgb(0, 0, 0, 0);

  color: #DDE0E6;
}

div.ecs-query div.ldt {
  min-width: 36px;
  max-width: 100%;
  min-height: 19px;
  overflow-x: hidden;
}

div.ecs-query-empty div.ldt {
  min-width: 1px;
}

div.query-default-text {
  font-family: Inter, Helvetica, sans-serif;
  font-weight: 400;
  color: #DDE0E6;
  opacity: 0.5;
  margin-left: -7px;
  cursor: pointer;
}

div.ecs-query:hover {
  background-color: #343B4C;
}

div.ecs-query pre, div.editor pre {
  min-height: 16px;
  max-width: inherit;
}

div.ecs-query-ok {
  background-color: #13151A !important;
  transition: background-color 0s;
}
/* ... */

